--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 <body>
     
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?si=yONqlClpWzcGRNfZ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?si=yONqlClpWzcGRNfZ&amp;autoplay=1&controls=0" title="POTATO" frameborder="0" allowfullscreen></iframe>
     </div>
 
 </body>
