--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,18 @@
             text-align: center;
             margin: 50px;
             font-family: Arial, sans-serif;
-        }
-        h1 {
+        } h1 {
             font-weight: bold;
             margin-top: 0;
-        }
-        p {
+        } p {
             margin-top: 20px;
-        }
-        .video-container {
+        } .video-container {
             position: relative;
             width: 100%;
             padding-bottom: 56.25%; /* 16:9 aspect ratio (h/w * 100) */
             margin-top: 20px;
             margin-bottom: 20px;
-        }
-        .video-container iframe {
+        } .video-container iframe {
             position: absolute;
             top: 0;
             left: 0;
@@ -37,7 +33,7 @@
 <body>
     
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?si=yONqlClpWzcGRNfZ&amp;autoplay=1&controls=0" title="POTATO" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?si=yONqlClpWzcGRNfZ&amp;autoplay=1&controls=0" frameborder="0" allowfullscreen></iframe>
     </div>
 
 </body>
