--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 <body>
     
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?si=yONqlClpWzcGRNfZ&amp;autoplay=1&controls=0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?autoplay=1&controls=0" frameborder="0" allowfullscreen></iframe>
     </div>
 
 </body>
