--- a/src/potato/index.html
+++ b/src/potato/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POTATO</title>
+    <link rel="icon" href="./img/potato.ico" type="image/x-icon">
     <style>
         body {
             text-align: center;
