--- a/src/potato/index.html
+++ b/src/potato/index.html
@@ -43,7 +43,7 @@
 
 <body>
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?start=0&autoplay=0&controls=0&showinfo=0&rel=0&modestbranding=1" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?start=0&autoplay=0&controls=0&showinfo=1&rel=0&modestbranding=1" allow="autoplay" frameborder="0" allowfullscreen></iframe>
     </div>
     
     <p>V:{{BRANCH}}-{{TAG_VERSION}}</p> <!-- Adicionando o texto no canto inferior direito -->
