Mod new parameters in url iframe video

--- a/src/potato/index.html
+++ b/src/potato/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POTATO</title>
     <link rel="icon" href="./img/potato.ico" type="image/x-icon">
+
     <style>
         body {
             text-align: center;
@@ -43,7 +44,7 @@
 
 <body>
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kXR0IwyM4Yw?start=0&autoplay=0&controls=0&showinfo=1&rel=0&modestbranding=1" allow="autoplay" frameborder="0" allowfullscreen></iframe>
+        <iframe id="ytplayer" type="text/html" width="auto" height="auto" src="https://www.youtube.com/embed/kXR0IwyM4Yw?start=0&autoplay=1&controls=0&showinfo=1&rel=0&modestbranding=1" frameborder="0" allowfullscreen></iframe>
     </div>
     
     <p>V:{{BRANCH}}-{{TAG_VERSION}}</p> <!-- Adicionando o texto no canto inferior direito -->
