Try fix play audio

--- a/src/potato/index.html
+++ b/src/potato/index.html
@@ -36,9 +36,9 @@
 
 </head>
 
-<body onload="document.getElementById('audio').play()">
+<body>
     
-    <audio id="audio" autoplay loop>
+    <audio autoplay loop>
         <source src="./audio/funkytown-low-quality.mp3" type="audio/mp3">
     </audio>
 
