--- a/src/potato/index.html
+++ b/src/potato/index.html
@@ -14,6 +14,7 @@
             margin: 0;
             font-family: Arial, sans-serif;
             height: 100vh; /* Para centralizar verticalmente */
+            display: flex;
             flex-direction: column;
             justify-content: center;
             background-color: black; /* Adicionando background preto */
