Encrement gif much longer

--- a/src/potato/index.html
+++ b/src/potato/index.html
@@ -45,7 +45,7 @@
 
     <img src="./img/potato.gif" alt="potato-spin">
 
-    <p>V:{{BRANCH}}-{{TAG_VERSION}}</p> <!-- Adicionando o texto no canto inferior direito -->
+    <p>V:{{BRANCH}}-1.{{TAG_VERSION}}</p> <!-- Adicionando o texto no canto inferior direito -->
     
     <script>
         function startAudio() {
